crates/solidity/testing/snapshots/bindings_output/expressions/type_expr/generated/0.6.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or EnumKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword or StructKeyword.
    ╭─[input.sol:6:1]
    │
  6 │ ╭─▶ function id(Answer ans) returns (Answer) {
    ┆ ┆   
 17 │ ├─▶ }
    │ │       
    │ ╰─────── Error occurred here.
────╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ enum Answer {
   │      ───┬──  
   │         ╰──── def: 1
 2 │   Yes,
   │   ─┬─  
   │    ╰─── def: 2
 3 │   No
   │   ─┬  
   │    ╰── def: 3
───╯
